# alfred-coin-ticker

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .versionrc.json  CHANGELOG.md  LICENSE  Makefile  README.md  api.py  build.sh  exclude.list  include.list  includes.list  info.plist  main.py  pyproject.toml  utils.py  workflow
.github/: FUNDING.yml
examples/cryptocompare/: coinlist_eth.json  mktcapfull_10.json  pricemultifull_btceth.json
tests/: test_api_coinmarketcap.py  test_api_cointick.py  test_api_cryptocompare.py  test_utils.py
