[project]
name = "alfred-coin-ticker"
version = "2.2.0"
description = ""
readme = "README.md"
authors = [{ name = "Bumsoo Kim", email = "bskim45@gmail.com" }]
requires-python = ">= 3.8, < 3.10"
license = "MIT"
dependencies = [
    "requests>=2.27.1,<3",
    "alfred-workflow",
]

[dependency-groups]
dev = ["mock~=3.0.5"]

[tool.uv.sources]
alfred-workflow = { git = "https://github.com/NorthIsUp/alfred-workflow-py3", rev = "master" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
python-preference = "only-system"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.coverage.run]
parallel = true
omit = [
  "tests/*",
]
