[project]
name = "alfred-coin-ticker"
version = "2.2.0"
description = ""
readme = "README.md"
authors = [{ name = "Bumsoo Kim", email = "bskim45@gmail.com" }]
requires-python = ">= 3.8, < 3.10"
license = "MIT"
dependencies = [
    "requests>=2.27.1,<3",
    "alfred-workflow",
]

[dependency-groups]
dev = [
    "mock~=3.0.5",
    "ruff>=0.12.0",
]

[tool.uv.sources]
alfred-workflow = { git = "https://github.com/NorthIsUp/alfred-workflow-py3", rev = "master" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
python-preference = "only-system"

[tool.ruff]
line-length = 79
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
  # https://docs.astral.sh/ruff/rules/
  "E501", # line-too-long,
  "I", # isort
  "B", # flake8-bugbear
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["utils"]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.coverage.run]
parallel = true
omit = [
  "tests/*",
]
